--- a/client/Contact Us/contactUs.css
+++ b/client/Contact Us/contactUs.css
@@ -18,6 +18,7 @@
 
 body {
   background-color: var(--secondary);
+  /* background-color:black; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -56,10 +57,12 @@ body {
 
 .left-section p {
   color: var(--dark-gray);
-  font-size: 14px;
+  font-size: 18px;
   margin-bottom: 25px;
   font-weight: 400;
   letter-spacing: 0.2px;
+  padding-top:10px;
+  line-height:1.5;
 }
 
 .left-section a {
