--- a/client/signUp/signUp.css
+++ b/client/signUp/signUp.css
@@ -40,11 +40,11 @@ body {
   letter-spacing: -0.5px;
   background: linear-gradient(to right, var(--primary), var(--primary-light));
   -webkit-background-clip: text; 
-  color: transparent;
+  -webkit-text-fill-color: transparent;
 }
 
 .tagline {
-  font-size: 14px;
+  font-size: 16px;
   color: #666;
 }
 
@@ -63,10 +63,11 @@ label {
 
 .form-control {
   width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
+  padding: 14px 16px;
+  border: 2px solid var(--gray);
   border-radius: 7px;
   transition: all 0.3s ease;
+  
 }
 .form-control:focus {
   border-color: var(--primary);
@@ -96,16 +97,16 @@ label {
   background: linear-gradient(to right, var(--primary), var(--primary-light));
   color: var(--white);
   box-shadow: 0 4px 15px rgba(106, 13, 173, 0.3);
-  color: white;
   border: none;
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
-  font-weight: 600;
+   transition: all 0.3s ease;
 }
 
 .btn:hover {
-  background-color: #5b0cb0;
+  opacity: 0.9;
+  background-color: var(--primary-dark);
 }
 
 .login-link {
